--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6.4",
         "livewire/volt": "^1.7.0",
+        "nnjeim/world": "^1.1",
         "pragmarx/google2fa-laravel": "^2.3",
         "spatie/laravel-permission": "^6.21",
         "stancl/tenancy": "^3.0"
